--- a/src/gwt/client/rooms/RoomsMessages.properties
+++ b/src/gwt/client/rooms/RoomsMessages.properties
@@ -24,9 +24,16 @@ tabComments = Comments
 #
 # Rooms page
 
-roomsMarquee = Rooms
+roomsMarquee = Featured Rooms
 roomsIntro = Rooms are where you can create your own space and show it off to your friends. \
              Decorate, chat and play games in your room!
 activeRooms = Active rooms
+winningRooms = <a href="#contest">Design Your Whirled</a> Contest Winners
 coolRooms = Hot new rooms
 emptyGrid = No rooms found, please try again later.
+
+winnerFirst = First Place
+winnerSecond = Second Place
+winnerThird = Third Place
+winnerHonorable = Honorable Mention
+winnerOther = Too Cool For School
