--- a/src/gwt/client/rooms/RoomsMessages.properties
+++ b/src/gwt/client/rooms/RoomsMessages.properties
@@ -28,7 +28,8 @@ roomsMarquee = Featured Rooms
 roomsIntro = Rooms are where you can create your own space and show it off to your friends. \
              Decorate, chat and play games in your room!
 activeRooms = Active rooms
-winningRooms = <a href="#contest">Design Your Whirled</a> Contest Winners
+winningRooms = <a href="#landing-designcontest" target="_blank">Design Your Whirled</a> Contest \
+  Winners
 coolRooms = Hot new rooms
 emptyGrid = No rooms found, please try again later.
 
