Separate pretty page for Design your Whirled contest winners.  Winners currently kept in a properties file; will move to database if it looks like we'll be done a lot more of these contests.
Still TODO: visual tweaking and creator name credits.

--- a/src/gwt/client/rooms/RoomsMessages.properties
+++ b/src/gwt/client/rooms/RoomsMessages.properties
@@ -6,6 +6,8 @@
 #
 # Global bits
 
+titleDesignWinners = Design Your Whirled Winners
+
 logonForHome = Please logon above to visit your home.
 
 noSuchMember = That member could not be found.
@@ -38,3 +40,15 @@ winnerSecond = Second Place
 winnerThird = Third Place
 winnerHonorable = Honorable Mention
 winnerOther = Too Cool For School
+
+#
+# Design Your Whirled winners page
+
+designwinnersEnter = Enter {0}
+designwinnersNoWinners = Contest Winners have not yet been announced.
+designwinnersHonorable = Honorable Mentions
+designwinnersHonorableSub = Honorable Mentions received Whirled stickers and buttons
+designwinnersTooCool = Too Cool For School
+designwinnersTooCoolSub = Other notable entries that really caught our attention (in no \
+  particular order)
+
