--- a/src/gwt/client/rooms/RoomsMessages.properties
+++ b/src/gwt/client/rooms/RoomsMessages.properties
@@ -44,6 +44,8 @@ winnerOther = Too Cool For School
 #
 # Design Your Whirled winners page
 
+designwinnersBlurb = Missed the contest this time around? Make sure to watch out for \
+  more contests with great prizes <a href="#contests">here</a>!
 designwinnersEnter = Enter {0}
 designwinnersNoWinners = Contest Winners have not yet been announced.
 designwinnersHonorable = Honorable Mentions
