#me-contests, not #contests.

--- a/src/gwt/client/rooms/RoomsMessages.properties
+++ b/src/gwt/client/rooms/RoomsMessages.properties
@@ -45,7 +45,7 @@ winnerOther = Too Cool For School
 # Design Your Whirled winners page
 
 designwinnersBlurb = Missed the contest this time around? Make sure to watch out for \
-  more contests with great prizes <a href="#contests">here</a>!
+  more contests with great prizes <a href="#me-contests">here</a>!
 designwinnersEnter = Enter {0}
 designwinnersNoWinners = Contest Winners have not yet been announced.
 designwinnersHonorable = Honorable Mentions
