--- a/src/gwt/client/adminz/AdminMessages.properties
+++ b/src/gwt/client/adminz/AdminMessages.properties
@@ -193,20 +193,20 @@ badMemberId = Could not parse memberId: {0}.
 requestedCashOutsTitle = Requested Cash Outs
 charityCashOutsTitle = Charity Cash Outs
 cashOutTitle = Bling Cash Outs
-cashOutEmptyMessage = <Empty>
-cashOutEntryAmount = Amount: {0}
-cashOutEntryWorth = Worth: {0}
-cashOutEntryRequested = Requested: {0}
-cashOutEntryPayPal = PayPal: {0}
-cashOutEntryTransactionsButton = Transactions
-cashOutEntryCashOutButton = Cash Out
-cashOutEntryCancelButton = Cancel Request
-cashOutEntryReason = Reason:
-cashOutEntryCancelSuccess = The cash out request has been canceled.
-cashOutEntryCashOutPanelAmount = Amount to cash out:
-cashOutEntryCashOutPanelButton = Cash Out This Member
-cashOutEntryCashOutSuccess = The bling has been successfully cashed out.
-cashOutIsCharity = (Charity)
+coEmptyMessage = <Empty>
+coEntryAmount = Amount: {0}
+coEntryWorth = Worth: {0}
+coEntryRequested = Requested: {0}
+coEntryPayPal = PayPal: {0}
+coEntryTransactionsButton = Transactions
+coEntryCashOutButton = Cash Out
+coEntryCancelButton = Cancel Request
+coEntryReason = Reason:
+coEntryCancelSuccess = The cash out request has been canceled.
+coEntryCashOutPanelAmount = Amount to cash out:
+coEntryCashOutPanelButton = Cash Out This Member
+coEntryCashOutSuccess = The bling has been successfully cashed out.
+coIsCharity = (Charity)
 
 #
 # Bureau
