Checkpoint: refactored BuyPanel so that it can be used to buy things other than items.

--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -6,6 +6,7 @@
 #
 # ShopPanel
 
+shopFree = Free!
 shopMarquee = Whirled Shop
 shopIntro = Buy avatars, furniture, pets, toys, and more to customize your experience in \
   Whirled.  You can also <a href="http://wiki.whirled.com/Portal:Creators">upload</a> \
@@ -18,7 +19,6 @@ shopFeatToy = Staff Pick Toy
 
 shopRank = {0}.
 shopBuy = Buy!
-shopFree = Free!
 
 shopSearch = Search
 
@@ -57,10 +57,6 @@ listingListed = Listed on:
 
 listingBuy = Buy!
 
-listingBuyBars = Get bars!
-listingCoinChange = You will receive {0} coins in change.
-listingExchangeRate = Exchanged at about {0} coins per bar.
-
 listingDelist = Delist
 listingDelistConfirm = Are you sure you want to remove this shop listing?
 
@@ -87,10 +83,9 @@ buyBars = Get Bars
 limitedPurchases = {0} of {1}
 
 #
-# BuyPanel
+# ItemBuyPanel
 
 boughtTitle = {0} Purchased!
-timesBought = Bought: {0}
 
 boughtViewStuff = You can find your new {0} in:
 boughtGoNow = Me -> My Stuff -> {0}
