Fixed contest text to include links to the game creation wiki and coders forum

--- a/src/gwt/client/landing/LandingMessages.properties
+++ b/src/gwt/client/landing/LandingMessages.properties
@@ -220,8 +220,10 @@ gameconConditionsText = \
 gameconEnterTitle = How to Enter
 gameconEnterText = <p>To enter, simply <a href="http://wiki.whirled.com/Upload/Game">upload</a> \
   your game to Whirled. Please be sure to fulfill the technical requirements as per the \
-  Conditions section above.</p>
-  
+  Conditions section above.</p><p>For more information about making games, read the \
+  <a href="http://wiki.whirled.com/Create_games">game creation guide</a>. If you get stuck, try \
+  the <a href="#groups-d_79">coders forum</a>.
+
 gameconJudgingTitle = Selection of Winners
 gameconJudgingText = <p>A panel of judges will judge all games submitted during each challenge. \
   Judges will evaluate based upon the game''s originality, gameplay, accessibility, and \
