Rearrange the buy buttons (emphasize bars, turn 'get bars' into a button, de-emphasize coins) and add a 'That's only -bash.09' blurb for bar listings. I had to resort to Windows.open() to open the billing page from a button. If there's a cleaner way, please god let me know.

--- a/src/gwt/client/money/MoneyMessages.properties
+++ b/src/gwt/client/money/MoneyMessages.properties
@@ -5,11 +5,12 @@
 
 # BuyPanel
 
-buy = Buy!
+buy = Buy
 buyFree = Free!
 timesBought = Bought: {0}
 
 getBars = Get bars!
+barCost = That''s only {0}!
 coinChange = You will receive {0} coins in change.
 exchangeRate = Exchanged at about {0} coins per bar.
 
