Hard-code access from dev. We were doing this before, except that the file was hand-modified and published.

--- a/pages/crossdomain.xml.in
+++ b/pages/crossdomain.xml.in
@@ -1,5 +1,6 @@
 <cross-domain-policy>
    <site-control permitted-cross-domain-policies="all"/>
    <allow-access-from domain="@SERVER_URL_HOST@" to-ports="*"/>
+   <allow-access-from domain="www.dev.whirled.com" to-ports="*"/>
    <allow-access-from domain="@MEDIA_URL_HOST@" to-ports="@HTTP_PORT@"/>
 </cross-domain-policy>
