Room purchasing. Checkpoint: (it works, though) - Rooms are presently 10,000 coins, hardcoded. - No affiliate/charity splits, right? - The old free room service is disabled, but not removed. Still to do: - Some UI love. - Configurable price / track bars? - fully remove old free-room service. - close loophole of starting group after group to get free rooms.

--- a/src/gwt/people.gwt.xml.in
+++ b/src/gwt/people.gwt.xml.in
@@ -3,6 +3,7 @@
   <inherits name="person"/>
   <inherits name="trophy"/>
   <inherits name="room"/>
+  <inherits name="money"/>
 
   <source path="com/kisgergely/gwt/canvas/client"/>
 
