A bit of UI love for room buying.

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -35,6 +35,7 @@ profileGreeterLabel = Friendly Person
 
 roomsTitle = {0}''s Rooms
 roomsMineTitle = My Rooms
+buyNewRoom = Buy a new room
 roomsIntro = These are all of {0}''s public rooms. Click a room to enter it or click its \
   name to see room details.
 roomsMineIntro = These are all of your rooms. Click a room to enter it or click its name \
