Group purchasing. Checkpoint... I've been tracking some tiny ridiculous bug down and haven't figured it out yet.

--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -29,6 +29,7 @@ groupEst = Est. {0}
 # GroupEdit
 
 editCreateTitle = Create Group
+createNew = Create a new Group
 
 editName = Name
 editLogo = Logo
