--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -379,6 +379,8 @@ m_played_game = Award from playing <a href="#games-d_{1}">{0}</a>.
 m_invited_friend_joined = Award for inviting <a href="#people-{1}">{0}</a> to Whirled.
 m_room_bought = Purchased a room.
 m_change_rcvd_room = Received change from purchase of room.
+m_group_created = Created a group: {0}.
+m.change_rcvd_group = Received change from creation of a group.
 m_transfer_from_guest = Transferred coins from your guest account when you registered.
 m_created_account = Some coins for you to start with. Welcome to Whirled!
 m_created_profile = Award for setting up your profile.
