Allow permaguests to save their accounts and some other permaguest fixes * New logic call to save the usual registration information to a new account. * Refactored parts of account creation to be reused when saving a guest account * Account creation now passes along permaguestId field in the reg. info, causing saving instead of creating * Fixed bug where permaguest home rooms were called "tmp's room", also made "Guest" string i18n * Status panel rejigged for permaguests. No mail, no username, Sign Up instead of Sign Out * Me page redirects to account creation for permaguests * Account creation rejigged for permaguests.   * The logon panel is now at the bottom (we still need it in case of accidental permaguest cookies).   * The intro text is different because the 1000 coins have already been awarded * CShell method for detecting a permaguest * Fixed bug where permaguest anon email would show up in logon text box

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -16,6 +16,7 @@ createTitle = Welcome to Whirled!
 createLogon = Already have an Account? Logon
 createIntro = Create a Free Whirled Account
 createCoins = Get 1000 free coins when you sign up!
+createSaveModeIntro = Keep your earnings when you sign up!
 
 createEmail = Email address:
 createEmailTip = You''ll use your email address to logon. We care about our players \
