--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -50,6 +50,7 @@ headerLogon = Logon!
 
 statusFriendsCoins = Invite your friends and earn coins! 
 statusLogoff = Sign Out
+statusSaveGuest = Sign Up
 statusHelp = Help
 statusBuyBars = Buy Bars!
 
