srcFixed game contest text. It is no longer recurring.

--- a/src/gwt/client/landing/LandingMessages.properties
+++ b/src/gwt/client/landing/LandingMessages.properties
@@ -128,12 +128,10 @@ gameconOverviewText = <p><a href="#landing">Whirled</a> \
   by online gaming pioneers Three Rings Design and represents years of \
   micro-transaction learning packaged into a Flash development and billing \
   framework.</p> \
-  <p>The Whirled Flash Game Developer Challenge is a standing game development contest \
-  that runs every three months. All games that are uploaded to Whirled during the \
-  contest period and comply with the below conditions are eligible.  There are two \
-  categories for prizes - single and multiplayer games.  The multiplayer game category \
-  also includes <a href="http://wiki.whirled.com/Avrg">MMO/AVRG-style games</a> that \
-  are played within the Whirled itself.</p>
+  <p>All games that are uploaded to Whirled during the contest period and comply with the below \
+  conditions are eligible.  There are two categories for prizes - single and multiplayer games.  \
+  The multiplayer game category also includes <a href="http://wiki.whirled.com/Avrg">MMO/AVRG-style \
+  games</a> that are played within the Whirled itself.</p>
   
 gameconPrizesTitle = The Prizes
 gameconPrizesText = \
