I didn't notice this before, but we're doing a round trip to the server to ask it something and then block the group change, but a hacked client could just do the change. Not that there are any hacked clients. But: why do the extra round trip? If it's a requirement for editing a group, put it in the damn editing a group servlet, and have the server do this extra check, not the client.
I'll stop rearranging the deck chairs soon, but I noticed a bunch of other crap:
- If you start editing a group, try to submit, are rebuffed, and then decide to
bail out, you have in your gwt client the group model that was updated with
your edits! It can be very confusing. I guess I'm punting on this one.
- Group name validation...

--- a/src/gwt/client/shell/ServerMessages.properties
+++ b/src/gwt/client/shell/ServerMessages.properties
@@ -82,6 +82,7 @@ already_friend = You are already their friend.
 group_name_in_use = That group name is already taken. Please choose another.
 group_medal_name_in_use = That medal name is already taken in this group.  Please choose another.
 group_member_has_medal = That member has already received this medal.
+group_tags_on_exclusive = In order to change the group policy to Exclusive, please remove all tags.
 
 #
 # Forum messages
