Facebookfix: Let's at least temporarily enshrine this solution, we can remove it if we do the more complicated thing.

--- a/pages/index.html.in
+++ b/pages/index.html.in
@@ -16,6 +16,11 @@
 </head>
 
 <body>
+  <script type="text/javascript">
+    if (top.location != location) {
+        top.location.href = document.location.href;
+    }
+  </script>
   <div id="loading" class="loading">
       <h2>Whirled is loading...</h2>
       <noscript><blockquote>
