--- a/src/gwt/client/money/MoneyMessages.properties
+++ b/src/gwt/client/money/MoneyMessages.properties
@@ -10,7 +10,8 @@ buyFree = Free!
 timesBought = Bought: {0}
 
 getBars = Get bars!
-barCost = That''s only {0}!
+centsCost = That''s only {0} cents!
+dollarCost = That''s only {0}!
 coinChange = You will receive {0} coins in change.
 exchangeRate = Exchanged at about {0} coins per bar.
 
