90% of email validation. Need to implement the servlet that actually accepts the validation and tidy up a niggle or two. Hopefully tomorrow will be a break from my recent cycle of "spend all morning and afternoon in meetings then do two hours of real work".

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -82,6 +82,15 @@ realNameUpdated = Real Name updated.
 editEmailHeader = Update Email Address
 editEmail = Email address:
 
+editEmailValid = Email validated:
+editEmailIsValid = Your email address has been validated. Thanks!
+editEmailNotValid = Your email address has not been validated. You will have limited \
+  access to Whirled until you validate your email.
+editEmailResend = Resend Validation Email
+
+editEmailResent = An email has been sent to {0}. It should arrive in a few moments. Be \
+  sure to check your spam folder to make sure it wasn''t accidentally filtered.
+
 emailUpdated = Email address updated. Remember, this new address must be used \
   next time you log onto Whirled.
 
