--- a/src/gwt/client/shell/ServerMessages.properties
+++ b/src/gwt/client/shell/ServerMessages.properties
@@ -34,6 +34,11 @@ version_mismatch = Your client is out of date. Please reload the page (hold \
   down shift and click the reload button in the browser toolbar).
 
 #
+# WebUserService messages
+
+already_validated = Your email address has already been validated. You''re good to go!
+
+#
 # MemberService messages
 
 opt_out_hash_mismatch = That opt-out URL is not valid. Please make sure it \
