Reclaim items out of rooms when deleting a flagged item. Also removed temporary code to handle clone flags

--- a/src/gwt/client/adminz/AdminMessages.properties
+++ b/src/gwt/client/adminz/AdminMessages.properties
@@ -85,7 +85,8 @@ reviewDeletionDont = Cancel
 reviewDeletionPrompt = To delete this item, enter a message to be sent to the item''s creator \
   (and anyone who owns the item if it was listed in the catalog):
 reviewDeletionSuccess = Successfully deleted {0} item(s) and notified owner(s). {1} refund \
-  transaction(s) were created.
+  transaction(s) were created. {2} item(s) were reclaimed from rooms. {3} item(s) failed to be \
+  reclaimed from rooms.
 
 reviewDeletionMailHeader = Item Deleted
 reviewDeletionMailMessage = The item "{0}" has been deleted by the game administrators. Where \
