Give BANNED people the same loving we give TEMP_BANNED people, namely the reason they were shown the door.

--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -92,6 +92,7 @@ forgotEmailSent = The email has been sent. Be sure to check your spam folder if 
 tempBan = Your account is temporarily banned and will not be able to logon for \
   another {1} hours.  Reason: {0}.
 
+ban = Your account has been banned.  Reason: {0}.
 
 #
 # Tag editing
