More email validation propriety. Always with the first 90% and the last 90%.

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -9,6 +9,12 @@
 accountTitle = Account
 welcomeTitle = Welcome!
 
+emailValidated = Your email has been validated. Thanks! If you have Whirled open in \
+  any other browser windows, you may need to reload them.
+emailInvalid = The validation code supplied didn''t check out. Try copying the URL from \
+  your validation email and pasting it into the browser''s location bar to make sure \
+  nothing gets messed up.
+
 #
 # CreateAccountPanel
 
@@ -82,7 +88,7 @@ realNameUpdated = Real Name updated.
 editEmailHeader = Update Email Address
 editEmail = Email address:
 
-editEmailValid = Email validated:
+editEmailValid = Validation:
 editEmailIsValid = Your email address has been validated. Thanks!
 editEmailNotValid = Your email address has not been validated. You will have limited \
   access to Whirled until you validate your email.
@@ -91,7 +97,8 @@ editEmailResend = Resend Validation Email
 editEmailResent = An email has been sent to {0}. It should arrive in a few moments. Be \
   sure to check your spam folder to make sure it wasn''t accidentally filtered.
 
-emailUpdated = Email address updated. Remember, this new address must be used \
+emailUpdated = Email address updated. You will receive a validation email at your new \
+  address in just a moment. Remember, this new address must be used \
   next time you log onto Whirled.
 
 editEPrefsHeader = Update Email Preferences
