Spam spam baked beans and spam.

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -95,11 +95,11 @@ editEmailNotValid = Your email address has not been validated. You will have lim
 editEmailResend = Resend Validation Email
 
 editEmailResent = An email has been sent to {0}. It should arrive in a few moments. Be \
-  sure to check your spam folder to make sure it wasn''t accidentally filtered.
+  sure to check your spam folder!
 
 emailUpdated = Email address updated. You will receive a validation email at your new \
-  address in just a moment. Remember, this new address must be used \
-  next time you log onto Whirled.
+  address in just a moment. Be sure to check your spam folder! Also remember, this new \
+  address must be used next time you log onto Whirled.
 
 editEPrefsHeader = Update Email Preferences
 
