- Translations for share - fuck the ui love, it's good enough - button? Button. I don't know. I'm not an artist. This works. - Add share to shop listing detail page. Shitty location. I don't know. - Yes, I'm grumpy, I'm sick and feel funny and am going home early for sure,   but this is a small improvement.

--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -258,6 +258,14 @@ today = Today
 yesterday = Yesterday
 
 #
+# ShareDialog
+
+share = Share
+shareTitle = Share this {0}
+shareFacebook = Share on Facebook
+shareMyspace = Share on MySpace
+
+#
 # ContestBox
 
 contestPrizes = Prizes
