Consolidated and cleaned up the various links to the billing system. Now they all go through one place which will shortly ensure that the member has a non-placeholder email address.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -100,8 +100,8 @@ tipCoins = Coins are earned by playing most <a href="/#games">games</a>, selling
   <a href="http://wiki.whirled.com/Coins">Learn more about coins</a>.
 
 tipBars = Bars are the faster way to get all the cool stuff you want! Bars can be bought  \
-  <a href="{0}">here</a> using credit card, paypal, store cards and \
-  other methods. <a href="http://wiki.whirled.com/Bars">Learn more!</a>
+  using credit card, paypal, store cards and other methods. \
+  <a href="http://wiki.whirled.com/Bars">Learn more!</a>
 
 tipBling = Bling is earned by creators when they sell items priced in Bars. Bling can be turned \
   into Bars or cashed out as real money! \
