Require that a user logon, register, or configure their account before buying bars if they are a guest, permaguest or placeholder email address haver.

--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -272,5 +272,16 @@ contestPrizes = Prizes
 
 #
 # Loading widget
+
 nowLoading = Loading...
 loadFinishing = Displaying...
+
+#
+# BillingUtil
+
+gobuyMustLogon = Please logon to Whirled and then you can go buy Bars.
+gobuyMustRegister = Before you can buy Bars, you need to create an account.
+gobuyRegister = Create Account
+gobuyMustConfigure = Before you can buy Bars, you need to set up your Whirled account \
+  with a username and password.
+gobuyConfigure = Set Up Account
