--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -31,7 +31,10 @@ charRemaining = (Characters remaining: {0})
 goHome = Your Home
 embed = <object width="{2}" height="{3}" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://active.macromedia.com/flash7/cabs/swflash.cab#version=9,0,0,0" allowScriptAccess="always"><param name="movie" value="{1}"/><param name="wmode" value="opaque"/><param name="FlashVars" value="{0}"/><embed width="{2}" height="{3}" flashvars="{0}" src="{1}" allowScriptAccess="always" wmode="opaque" pluginspace="http://www.macromedia.com/go/getflashplayer" ntype="application/x-shockwave-flash"></embed></object><br/><center><a href="{4}" target="_top">Launch the full version of Whirled</a></center>
 
-requiresValidated = You cannot do that until you validate your email address.
+requiresRegistered = You need to create your Whirled account before you can do that.
+goRegister = Sign Up!
+
+requiresValidated = You need to validate your email address before you can do that.
 goValidate = Validate Email
 
 #
