First pass at new new game invite page * We now just show an intro blurb and two big buttons when the game issues a share request * First button is hooked up to show email controls, second is not hooked up yet * Email controls show an address list and a way to import webmail contacts * Clicking "Add more addresses" changes the text entry to use manual types names and addresses * Also reverted the encoding of the game token to use base 64 in order to obscure the game's potentially secret data

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -315,3 +315,8 @@ linkToWhirledClickBelow = Click an image below...
 greetersTitle = Friendly People
 noGreeters = There are no Friendly People.
 greetersListTitle = Friendly People
+
+#
+# GameInvitePanel
+gameInviteIntro = Invite friends to play {0} for fun and profit. Choose a method by clicking a \
+   button below.
