Require registration and validation before creating a group.

--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -31,6 +31,12 @@ groupEst = Est. {0}
 editCreateTitle = Create Group
 createNew = Create a new Group
 
+# NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
+editMustRegister = You need to create your Whirled account before you can create a group.<br/> \
+  <a href="#account-create">Sign Up!</a>
+editMustValidate = You need to validate your email address before you can create a group.<br/> \
+  <a href="#account-edit">Go Validate!</a>
+
 editName = Name
 editLogo = Logo
 editHomepage = Homepage URL
