--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -161,12 +161,18 @@ loadingComments = Loading comments...
 noComments = No comments.
 postComment = Post comment...
 
+commentPostTitle = Post a Comment
 commentText = Enter the text of your comment:
 
 commentPosted = Comment posted.
 commentDeleted = Comment deleted.
 commentDeletionNotAllowed = You are not permitted to delete that comment.
 commentInvalid = Comments must have at least 8 letters.
+
+commentAmNotAsshole = I have read and understand the \
+  <a href="http://wiki.whirled.com/Comment">Comment Guidelines</a>
+commentMustNotBeAsshole = You must confirm that you have read and understood the \
+  Comment Guidelines before you can post a comment.
 
 postedOn = on {0}
 deletePost = [delete]
