Brevify to avoid blowing our two line maximum.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -190,7 +190,7 @@ editorBlurb4 = Whirled games are developed in ActionScript 3 (AS3) either using 
   standalone compiler or the Flash 9 Authoring Tool. Integrate your game with Whirled by \
   following the <a href="http://wiki.whirled.com/Create_games">wiki</a>.
 editorBlurb5 = Avatars are usually SWF files. If you want to upload a plain image \
-  (animated gifs do not presently work inside whirled) as your avatar, we can convert it into \
+  (animated gifs do not presently work inside Whirled), we can convert it into \
   a cheesy bouncing avatar (you can change a few settings).
 editorBlurb6 = Pets are animated characters that wander rooms, change moods, and \
   interact with players. Pets can only be SWF files. If you upload an image, we can convert it \
