WRLD-97 "fix". Require the user to confirm that they own copyright to the media for an item before they can save or update it.

--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -10,6 +10,11 @@ upload = Upload
 errUploadTooLarge = The file you are uploading is too large.
 errUploadError = An unrecoverable error occurred during the upload.
 
+copyrightConfirm = I affirm that I own all copyrights to the media used by this item \
+  or I have authorization to upload it
+mustConfirm = You must confirm that you own the copyright to all media before you can \
+  create or update your item.
+
 #
 # ItemEditor
 
