Report the currency in which we lack sufficiency when attmepting a purchase. Use that information on the client to exhort the user to buy bars, or to exhort the user to buy bars.

--- a/src/gwt/client/money/MoneyMessages.properties
+++ b/src/gwt/client/money/MoneyMessages.properties
@@ -17,3 +17,6 @@ exchangeRate = Exchanged at about {0} coins per bar.
 
 donatedToCharity = {0} has been donated to 
 changeCharity = (Change Charity)
+
+insufficientCoins = You don''t have enough coins to buy that. Save time and buy it with bars!
+insufficientBars = You don''t have enough bars to buy that.
