Christ, Tufte would have a field day with our pagejunk.

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -281,6 +281,7 @@ galleriesTitle = Galleries
 
 #
 # SharePanel
+
 shareIntro = Invite Friends to Whirled and earn Coins, Bars and Bling! Have fun with more friends, \
     and earn 30% of everything they spend at the Shop. If you invite lots of friends, you could \
     earn enough to Cash Out your Bling into real money! \
@@ -294,11 +295,11 @@ shareLinkToContent = Share your Room and Games! \
 
 #
 # LinkToWhirledPanel
+
 linkToWhirledTitle = Share Whirled
-linkToWhirledIntro = Earn money by promoting Whirled!
 linkToWhirledInstructions = Click the image you want to include on your blog or website, then copy \
-   and paste the html code that appears in the box below.<br><br>Your id is stored in the code and \
-   when new users join Whirled through your link you earn coins, bars and bling. \
+   and paste the html code that appears in the box below.<br><br>Your account id is stored in the \
+   code and when new users join Whirled through your link you earn coins, bars and bling. \
    <a href="http://wiki.whirled.com/Affiliate">More Info</a>.
 linkToWhirledSquareImages = 125x125 Buttons
 linkToWhirledTinyImages = Tiny Banners
