--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -285,7 +285,7 @@ galleriesTitle = Galleries
 # SharePanel
 
 shareIntro = Invite Friends to Whirled and earn Coins, Bars and Bling! Have fun with more friends, \
-    and earn 30% of everything they spend at the Shop. If you invite lots of friends, you could \
+    and earn 30% of everything they spend at the Shop. If you invite lots of friends, you can \
     earn enough to Cash Out your Bling into real money! \
     <a href="http://wiki.whirled.com/Affiliate">Details</a>
 # NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
