Implement opting out for game invites. Annoying, but has to be done.

--- a/src/gwt/client/shell/ServerMessages.properties
+++ b/src/gwt/client/shell/ServerMessages.properties
@@ -43,6 +43,8 @@ already_validated = Your email address has already been validated. You''re good 
 
 opt_out_hash_mismatch = That opt-out URL is not valid. Please make sure it \
   was copied exactly from the email you received.
+invite_not_found = That opt-out URL is not valid. Please make sure it \
+  was copied exactly from the email you received.
 
 #
 # Inventory server messages
