Moved the invite results display into the utils class and show it for game invites too

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -202,7 +202,7 @@ friendsWhoseFriends = {0}''s Friends
 friendsWhoseFriendsAndGreeters = {0}''s Friends And Friendly People
 
 #
-# InvitePanel
+# InvitePanel, some sharing with GameInvitePanel
 
 inviteTitle = Invite Friends
 justRegInviteTitle = Find Friends
